apps/base/jellyfin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  labels:
    app: jellyfin
    http-ingress: "true"
